Show big fat warning that smtp password will be saved on disk in clear text

BUG: 320617
REVIEW: 110904